--- a/client/todo/src/App.css
+++ b/client/todo/src/App.css
@@ -8,23 +8,36 @@
 
 main {
     padding: 32px;
-    display: flex;
-    flex-direction: row;
+    display:inline-table;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
+    position: absolute;
+    width:100%;
+}
+
+.mainHeader {
+    width:100%;
+    height:50px;
+    margin: auto;
+    position:relative;
+    padding: 10px;
+    border: 3px solid #73AD21;
 }
 
 .topButtons{
-    width:50%;
-    height:100px;
-    position:absolute;
+    margin: auto;
+    top: 100%;
+    width: 100%;
+    border: 3px solid #73AD21;
+    padding: 10px;
+    position:relative;
 }
 .list{
-   width:40%;
-   height:100px;
-   position: relative;
-   top: 115px;
+    width: 100%;
+    border: 3px solid #73AD21;
+    padding: 10px;
+    position:relative;
 }
 
 .popup {
